# Prosody-Protocol

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXECUTION_GUIDE.md  LICENSE  README.md  pyproject.toml  spec.md
.github/workflows/: ci.yml  publish.yml
api/: app.py  config.py
api/routes/: convert.py  synthesize.py  validate.py
datasets/: README.md
docs/: API.md  quickstart.md
docs/integrations/: claude.md  coqui_tts.md  elevenlabs.md  mavis.md  whisper.md
schemas/: dataset-entry.schema.json  iml-1.0.xsd  prosody-profile.schema.json
src/prosody_protocol/: __init__.py  assembler.py  audio_to_iml.py  benchmarks.py  datasets.py  emotion_classifier.py  exceptions.py  iml_to_audio.py  iml_to_ssml.py  mavis_bridge.py  models.py  parser.py  profiles.py  prosody_analyzer.py  text_to_iml.py  validator.py
tests/: conftest.py  generate_audio_fixtures.py  test_adoption.py  test_api.py  test_assembler.py  test_audio_to_iml.py  test_benchmarks.py  test_datasets.py  test_emotion_classifier.py  test_iml_to_audio.py  test_iml_to_ssml.py  test_mavis_bridge.py  test_models.py  test_parser.py  test_profiles.py  test_prosody_analyzer.py  test_text_to_iml.py  test_training.py  test_validator.py
tests/fixtures/invalid/: confidence_out_of_range.xml  emphasis_missing_level.xml  missing_confidence.xml  missing_pause_duration.xml  pause_with_content.xml  segment_in_prosody.xml
tests/fixtures/profiles/: autism_spectrum.json  invalid_bad_version.json  invalid_empty_mappings.json  invalid_missing_user.json  (+1 more)
training/: __init__.py  config.py  metrics.py
training/configs/: pitch_contour_cnn.yaml  ser_wav2vec2.yaml  text_to_prosody_bert.yaml
training/models/: __init__.py  base.py  pitch_contour.py  ser.py  text_prosody.py
training/scripts/: data_prep.py  evaluate.py  export.py  train.py
(+21 files in other folders)
