[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prosody-protocol"
dynamic = ["version"]
description = "SDK for the Intent Markup Language (IML) -- preserving prosodic intent in speech-to-text."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Kase Branham" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed",
]

dependencies = [
    "lxml>=5.0",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "openai-whisper>=2023",
    "praat-parselmouth>=0.4",
]
ml = [
    "torch>=2.0",
    "transformers>=4.30",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "lxml-stubs",
]
all = ["prosody-protocol[audio,ml,api,dev]"]

[tool.hatch.version]
path = "src/prosody_protocol/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
